Bug 280879 - Video thumbsnails not created
Summary: Video thumbsnails not created
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.8.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 284852 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-27 10:27 UTC by Rafael
Modified: 2012-10-19 13:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Cropped image with thumsnails without frame of videos (86.35 KB, image/jpeg)
2011-08-27 10:27 UTC, Rafael
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael 2011-08-27 10:27:41 UTC
Created attachment 63174 [details]
Cropped image with thumsnails without frame of videos

Version:           0.8.0 (using KDE 4.7.0) 
OS:                Linux

Since I upgraded to KDE SC 4.7 (on OpenSUSE), Gwenview do not create thumbnails for video files. It's a big bug for me, cause I love Gwenview to quicly see my videos.

Reproducible: Always

Steps to Reproduce:
Opening any folder with videos and wait till thumbsnails were created. Images has thumbsnails, videos haven't

Actual Results:  
Videos have no little thumbnails.

Expected Results:  
Videos must have a little frame from each video.

OS: Linux (x86_64) release 2.6.37.6-0.5-desktop
Compiler: gcc
Comment 1 Steve Murray 2011-10-11 23:06:21 UTC
I have exactly the same problem.  Worked fine before upgrading to 4.7.  Tried installing various thumbnailers, but still not working.  It's a shame because I really like gwenview and I work with lots of mixed media.
Comment 2 Rafael 2011-10-13 21:54:37 UTC
Hi Steve

I tried what you did, but, like you, still without any video thumbnail. Gwenview developer said me it was not Gwenview related but, why I can see movies thumbnails with Dolphin or Digikam?. Lastly, I need to use Digikam to do what I usually did with Gwenview. It's a pity this bug is not fixed.

Best regards
Comment 3 Aurelien Gateau 2011-11-25 15:35:49 UTC
*** Bug 284852 has been marked as a duplicate of this bug. ***
Comment 4 Aurelien Gateau 2011-11-25 15:36:50 UTC
Git commit da0fa0f612788debb2e6da2bc8230e90638fee99 by Aurélien Gâteau.
Committed on 25/11/2011 at 16:36.
Pushed by gateau into branch 'master'.

Unbreak svg and video thumbnails

BUG: 280879

M  +4    -1    lib/thumbnailloadjob.cpp
M  +2    -0    lib/thumbnailloadjob.h

http://commits.kde.org/gwenview/da0fa0f612788debb2e6da2bc8230e90638fee99
Comment 5 Aurelien Gateau 2011-11-25 15:48:34 UTC
Git commit c9dbb3b99198b6b007988e3069c9cd26b1cd64f9 by Aurélien Gâteau.
Committed on 25/11/2011 at 16:47.
Pushed by gateau into branch 'KDE/4.7'.

Backport da0fa0f6: Unbreak svg and video thumbnails

BUG: 280879

M  +4    -1    lib/thumbnailloadjob.cpp
M  +2    -0    lib/thumbnailloadjob.h

http://commits.kde.org/gwenview/c9dbb3b99198b6b007988e3069c9cd26b1cd64f9