Unbreak svg and video thumbnails

BUG: 280879