lib/thumbnailloadjob.cpp
@@ -674,7 +674,10 @@ void ThumbnailLoadJob::checkThumbnail()
         KFileItemList list;
         list.append(mCurrentItem);
         const int pixelSize = ThumbnailGroup::pixelSize(mThumbnailGroup);
-        KIO::Job* job = KIO::filePreview(list, QSize(pixelSize, pixelSize));
+        if (mPreviewPlugins.isEmpty()) {
+            mPreviewPlugins = KIO::PreviewJob::availablePlugins();
+        }
+        KIO::Job* job = KIO::filePreview(list, QSize(pixelSize, pixelSize), &mPreviewPlugins);
         //job->ui()->setWindow(KApplication::kApplication()->activeWindow());
         connect(job, SIGNAL(gotPreview(KFileItem, QPixmap)),
                 this, SLOT(slotGotPreview(KFileItem, QPixmap)));
