lib/thumbnailloadjob.h
@@ -221,6 +221,8 @@ private:
 
     ThumbnailThread mThumbnailThread;
 
+    QStringList mPreviewPlugins;
+
     void determineNextIcon();
     void startCreatingThumbnail(const QString& path);
 
